# ETU_Labs

./: .gitignore  BaseConvert.cpp  BaseConvert.h  CMakeLists.txt  ConsoleInteractor.cpp  ConsoleInteractor.h  input.txt  lab1.cpp  lab1.h  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  labs.h  main.cpp  output.txt
